--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 		<ul>
 			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">item</li>
 			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">map</li>
-			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">roulette</li>
+			<li>
+				<img src="images/roulette.png" class="roulette">
+			</li>
 		</ul>
 	</div>
 </body>
