update navi position

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 <body>
 	<div id="main"></div>
+	<div class="mass">
+		<p>残り50マス</p>
+	</div>
 	<div class="navi">
 		<ul>
 			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">item</li>
