--- a/index.html
+++ b/index.html
@@ -23,13 +23,23 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+	<!-- modal -->
+
+	<!-- canvas -->
 	<div id="main"></div>
+
+	<!-- mass -->
 	<div class="mass">
 		<p>残り50マス</p>
 	</div>
+
+	<!-- navi -->
 	<div class="navi">
 		<ul>
-			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">item</li>
+			<li>
+				<img src="images/item.png" class="button">
+			</li>
 			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">map</li>
 			<li>
 				<img src="images/roulette.png" class="roulette">
