--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <body>
 
 	<!-- modal -->
-
+	<div id="modal">
+		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+	</div>
 	<!-- canvas -->
 	<div id="main"></div>
 
