--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<!-- JavaScript -->
 	<script src="js/main.js"></script>
+	<script src="js/navi.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
@@ -28,6 +29,7 @@
 	<div id="modal">
 		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
 	</div>
+
 	<!-- canvas -->
 	<div id="main"></div>
 
@@ -40,11 +42,13 @@
 	<div class="navi">
 		<ul>
 			<li>
-				<img src="images/item.png" class="button">
+				<img src="images/navi/item_b.png"class="button">
 			</li>
-			<li class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">map</li>
 			<li>
-				<img src="images/roulette.png" class="roulette">
+				<img src="images/navi/map_b.png" class="button">
+			</li>
+			<li>
+				<img src="images/navi/roulette_b.png" class="roulette" onclick="advance(1)">
 			</li>
 		</ul>
 	</div>
