--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- JavaScript -->
 	<script src="js/main.js"></script>
-
+	<script src="js/navi.js"></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,8 +26,31 @@
 
 	<!-- modal -->
 	<div id="modal">
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+
+		<button class="change mdl-button mdl-js-button mdl-button--raised mdl-button--accent">コレクション</button>
+
 		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+
 	</div>
+<!-- 
+<div id="modal2">
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+		<img src="images/ゲンガー.png" class="item">	
+
+		<button class="colle mdl-button mdl-js-button mdl-button--raised mdl-button--accent">コレクション</button>
+
+		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+
+	</div>
+ -->
 	<!-- canvas -->
 	<div id="main"></div>
 
