やっとこさ

--- a/index.html
+++ b/index.html
@@ -23,34 +23,35 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 	<!-- modal -->
 	<div id="modal">
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
+		<div id="item">
+			<img src="images/ゲンガー.png" class="item">	
+			<img src="images/ゲンガー.png" class="item">	
+			<img src="images/ゲンガー.png" class="item">	
+			<img src="images/ゲンガー.png" class="item">	
+			<img src="images/ゲンガー.png" class="item">	
+			<img src="images/ゲンガー.png" class="item">	
 
-		<button class="change mdl-button mdl-js-button mdl-button--raised mdl-button--accent">コレクション</button>
+			<button class="change mdl-button mdl-js-button mdl-button--raised mdl-button--accent">コレクション</button>
 
-		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+			<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+		</div>
 
+		<div id="collection">
+			<img src="images/ゲンガー.png" class="collection">
+			<img src="images/ゲンガー.png" class="collection">
+			<img src="images/ゲンガー.png" class="collection">
+			<img src="images/ゲンガー.png" class="collection">
+			<img src="images/ゲンガー.png" class="collection">
+			<img src="images/ゲンガー.png" class="collection">
+
+			<button class="change mdl-button mdl-js-button mdl-button--raised mdl-button--accent">アイテム</button>
+
+			<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+		</div>
 	</div>
-<!-- 
-<div id="modal2">
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
-		<img src="images/ゲンガー.png" class="item">	
 
-		<button class="colle mdl-button mdl-js-button mdl-button--raised mdl-button--accent">コレクション</button>
-
-		<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
-
-	</div>
- -->
 	<!-- canvas -->
 	<div id="main"></div>
 
