--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	<!-- mass -->
 	<div class="mass">
-		<p>残り50マス</p>
+		<p id="m_message">残り50マス</p>
 	</div>
 
 	<!-- navi -->
@@ -70,7 +70,7 @@
 				<img src="images/navi/map_b.png" class="button">
 			</li>
 			<li>
-				<img src="images/navi/roulette_b.png" class="roulette" onclick="advance(1)">
+				<img src="images/navi/roulette_b.png" class="roulette" onclick="advance(5)">
 			</li>
 		</ul>
 	</div>
