--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>うちなーたびあっちゅん</title>
+	<title>うちなーたびあっちゅんちゅん</title>
 
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
