進めたよん

--- a/main.html
+++ b/main.html
@@ -22,12 +22,10 @@
 	<script src="js/item.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/roulette.js"></script>
-
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 	<!-- modal -->
 	<div id="modal">
 		<div id="item">
@@ -61,6 +59,12 @@
 				<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
 			</div>
 		</div>
+
+		<div class="kwsk">
+			
+			
+		</div>
+
 	</div>
 
 	<!-- canvas -->
