--- a/main.html
+++ b/main.html
@@ -24,8 +24,10 @@
 	<script src="js/roulette.js"></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/kabotya.css">
 </head>
 <body>
+
 	<!-- modal -->
 	<div id="modal">
 		<div id="item">
@@ -67,6 +69,9 @@
 
 	</div>
 
+	<!-- kabotyaModal -->
+	<div></div>
+
 	<!-- canvas -->
 	<div id="main"></div>
 
@@ -82,7 +87,7 @@
 				<img src="images/navi/item_b.png" class="button">
 			</li>
 			<li>
-				<img src="images/navi/map_b.png" class="button">
+				<img src="images/navi/map_b.png" class="button_map">
 			</li>
 			<li>
 				<img src="images/navi/roulette_b.png" class="roulette" onclick="roulette()">
