add modal_kabotya remove modal_kabotya.html

--- a/main.html
+++ b/main.html
@@ -69,7 +69,18 @@
 	</div>
 
 	<!-- kabotyaModal -->
-	<div></div>
+	<div class="modal_kabotya">
+		<div class="kabotya_map">
+			<div class="kabotya_map_contents">
+				<img src="images/map.png"/>
+			</div>
+
+			<div class="kabotya_map_menu">
+				<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
+			</div>																						
+			
+		</div>
+	</div>
 
 	<!-- canvas -->
 	<div id="main"></div>
