--- a/main.html
+++ b/main.html
@@ -70,14 +70,9 @@
 
 	<!-- kabotyaModal -->
 	<div class="modal_kabotya">
-		<div class="kabotya_map">
-			<div class="kabotya_map_contents">
-				<img src="images/map.png"/>
-			</div>
+		
 
-			<div class="kabotya_map_menu">
-				<button class="close mdl-button mdl-js-button mdl-button--raised mdl-button--accent">閉じる</button>
-			</div>																						
+		<div class="kabotya_spot">
 			
 		</div>
 	</div>
