--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<div>
-			<button class="start_button" type="submit" onclick="location.href='file:///Users/aitoh/Desktop/graduation/main.html'"
+			<button class="start_button" type="submit" onclick="location.href='./main.html'"
 			style="margin-left:40%;margin-right:20%;">START!!
 			</button>
 		</div>
