--- a/main.html
+++ b/main.html
@@ -69,13 +69,7 @@
 	</div>
 
 	<!-- kabotyaModal -->
-	<div class="modal_kabotya">
-		
-
-		<div class="kabotya_spot">
-			
-		</div>
-	</div>
+	<div class="modal_kabotya"></div>
 
 	<!-- canvas -->
 	<div id="main"></div>
