--- a/main.html
+++ b/main.html
@@ -22,6 +22,7 @@
 	<script src="js/item.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/roulette.js"></script>
+	<script src="js/text.js"></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/kabotya.css">
@@ -31,12 +32,12 @@
 	<div id="modal">
 		<div id="item">
 			<div>
-				<img src="images/ゲンガー.png" class="item item_1">	
-				<img src="images/ゲンガー.png" class="item item_2">	
-				<img src="images/ゲンガー.png" class="item item_3">	
-				<img src="images/ゲンガー.png" class="item item_4">	
-				<img src="images/ゲンガー.png" class="item item_5">	
-				<img src="images/ゲンガー.png" class="item item_6">	
+				<img src="images/ゲンガー.png" class="item" id="item_1">	
+				<img src="images/ゲンガー.png" class="item" id="item_2">	
+				<img src="images/ゲンガー.png" class="item" id="item_3">	
+				<img src="images/ゲンガー.png" class="item" id="item_4">	
+				<img src="images/ゲンガー.png" class="item" id="item_5">	
+				<img src="images/ゲンガー.png" class="item" id="item_6">	
 			</div>
 
 			<div>
@@ -47,12 +48,12 @@
 
 		<div id="collection">
 			<div>
-				<img src="images/ゲンガー.png" class="collection collection_1">
-				<img src="images/ゲンガー.png" class="collection collection_2">
-				<img src="images/ゲンガー.png" class="collection collection_3">
-				<img src="images/ゲンガー.png" class="collection collection_4">
-				<img src="images/ゲンガー.png" class="collection collection_5">
-				<img src="images/ゲンガー.png" class="collection collection_6">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_1">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_2">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_3">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_4">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_5">
+				<img src="images/ゲンガー.png" class="collection" id=" collection_6">
 			</div>
 
 			<div>
@@ -62,8 +63,17 @@
 		</div>
 
 		<div class="kwsk">
-			
-			
+			<div class="kwsk_header">
+				<img id="kwsk_img" src="images/ゲンガー.png" >
+			</div>
+
+			<div class="kwsk_text">
+				<p id="text"></p>
+			</div>
+
+			<div>
+				<button class="kwsk_menu">閉じる</button>
+			</div>
 		</div>
 
 	</div>
