こうしんしまあした

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	
+	<script src="js/libs/jqueryRotate.js"></script>
 	<!-- THREE -->
 	<script src="js/libs/three.min.js"></script>
 	<script src="js/libs/TrackballControls.js"></script>
