ルーレット更新

--- a/main.html
+++ b/main.html
@@ -99,7 +99,9 @@
 				<img src="images/navi/map_b.png" class="button_map">
 			</li>
 			<li>
-				<img src="images/navi/roulette_b.png" class="roulette" onclick="roulette()">
+				<div>
+					<img src="images/navi/roulette_b.png" id="mato" onclick="roulette()">
+				</div>
 			</li>
 		</ul>
 	</div>
