雲を増やしました

--- a/main.html
+++ b/main.html
@@ -32,12 +32,12 @@
 	<div id="modal">
 		<div id="item">
 			<div>
-				<img src="images/ゲンガー.png" class="item" id="item_1">	
-				<img src="images/ゲンガー.png" class="item" id="item_2">	
-				<img src="images/ゲンガー.png" class="item" id="item_3">	
-				<img src="images/ゲンガー.png" class="item" id="item_4">	
-				<img src="images/ゲンガー.png" class="item" id="item_5">	
-				<img src="images/ゲンガー.png" class="item" id="item_6">	
+				<img src="images/question.jpg" class="item" id="item_1">	
+				<img src="images/question.jpg" class="item" id="item_2">	
+				<img src="images/question.jpg" class="item" id="item_3">	
+				<img src="images/question.jpg" class="item" id="item_4">	
+				<img src="images/question.jpg" class="item" id="item_5">	
+				<img src="images/question.jpg" class="item" id="item_6">	
 			</div>
 
 			<div>
@@ -48,12 +48,12 @@
 
 		<div id="collection">
 			<div>
-				<img src="images/ゲンガー.png" class="collection" id=" collection_1">
-				<img src="images/ゲンガー.png" class="collection" id=" collection_2">
-				<img src="images/ゲンガー.png" class="collection" id=" collection_3">
-				<img src="images/ゲンガー.png" class="collection" id=" collection_4">
-				<img src="images/ゲンガー.png" class="collection" id=" collection_5">
-				<img src="images/ゲンガー.png" class="collection" id=" collection_6">
+				<img src="images/question.jpg" class="collection" id=" collection_1">
+				<img src="images/question.jpg" class="collection" id=" collection_2">
+				<img src="images/question.jpg" class="collection" id=" collection_3">
+				<img src="images/question.jpg" class="collection" id=" collection_4">
+				<img src="images/question.jpg" class="collection" id=" collection_5">
+				<img src="images/question.jpg" class="collection" id=" collection_6">
 			</div>
 
 			<div>
@@ -64,7 +64,7 @@
 
 		<div class="kwsk">
 			<div class="kwsk_header">
-				<img id="kwsk_img" src="images/ゲンガー.png" >
+				<img id="kwsk_img" src="images/question.jpg" >
 			</div>
 
 			<div class="kwsk_text">
