--- a/main.html
+++ b/main.html
@@ -23,6 +23,8 @@
 	<script src="js/map.js"></script>
 	<script src="js/roulette.js"></script>
 	<script src="js/text.js"></script>
+	<script src="js/draw.js"></script>
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/kabotya.css">
