ちょろっと更新

--- a/main.html
+++ b/main.html
@@ -65,12 +65,14 @@
 		</div>
 
 		<div class="kwsk">
-			<div class="kwsk_header">
-				<img id="kwsk_img" src="images/question.jpg" >
-			</div>
+			<div>
+				<div class="kwsk_header">
+					<img id="kwsk_img" src="images/question.jpg" >
+				</div>
 
-			<div class="kwsk_text">
-				<p id="text"></p>
+				<div class="kwsk_text">
+					<p id="text"></p>
+				</div>
 			</div>
 
 			<div>
