--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
 	<script src="js/roulette.js"></script>
 	<script src="js/text.js"></script>
 	<script src="js/draw.js"></script>
+	<script src="js/event.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
