--- a/main.html
+++ b/main.html
@@ -65,19 +65,19 @@
 			</div>
 		</div>
 
-		<div class="kwsk">
+		<div class="detail">
 			<div>
-				<div class="kwsk_header">
-					<img id="kwsk_img" src="images/question.jpg" >
+				<div class="detail_header">
+					<img id="detail_img" src="images/question.jpg" >
 				</div>
 
-				<div class="kwsk_text">
+				<div class="detail_text">
 					<p id="text"></p>
 				</div>
 			</div>
 
 			<div>
-				<button class="kwsk_menu">閉じる</button>
+				<button class="detail_close">閉じる</button>
 			</div>
 		</div>
 
